WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75808
The JIT's protocol for exception handling should be available to other parts of the system
https://bugs.webkit.org/show_bug.cgi?id=75808
Summary
The JIT's protocol for exception handling should be available to other parts ...
Filip Pizlo
Reported
2012-01-08 15:05:40 PST
Patch forthcoming.
Attachments
the patch
(14.94 KB, patch)
2012-01-08 15:22 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(14.89 KB, patch)
2012-01-08 15:28 PST
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-01-08 15:06:00 PST
<
rdar://problem/10661025
>
Filip Pizlo
Comment 2
2012-01-08 15:22:12 PST
Created
attachment 121594
[details]
the patch
WebKit Review Bot
Comment 3
2012-01-08 15:24:22 PST
Attachment 121594
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/CMakeLists.txt', u'S..." exit_code: 1 Source/JavaScriptCore/jit/JITExceptions.h:45: The parameter name "globalData" adds no information, so it should be removed. [readability/parameter_name] [5] Source/JavaScriptCore/jit/JITExceptions.h:47: The parameter name "globalData" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4
2012-01-08 15:28:02 PST
Created
attachment 121595
[details]
the patch
Filip Pizlo
Comment 5
2012-01-08 15:47:43 PST
Landed in
http://trac.webkit.org/changeset/104415
Ryosuke Niwa
Comment 6
2012-01-08 20:32:27 PST
WinCE build fix landed in
http://trac.webkit.org/changeset/104429
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug