The JIT's protocol for exception handling should be available to other parts of the system https://bugs.webkit.org/show_bug.cgi?id=75808 <rdar://problem/10661025>

Reviewed by Oliver Hunt.

* CMakeLists.txt:
* GNUmakefile.list.am:
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
* JavaScriptCore.xcodeproj/project.pbxproj:
* Target.pri:
* jit/JITExceptions.cpp: Added.
(JSC::genericThrow):
(JSC::jitThrow):
* jit/JITExceptions.h: Added.
* jit/JITStubs.cpp:
* runtime/JSGlobalData.h:



Canonical link: https://commits.webkit.org/92617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104415 268f45cc-cd09-0410-ab3c-d52691b4dbfc